@@ -628,6 +628,7 @@
         [music]
             name={MUSIC}
             immediate=yes
+            ms_after=2000
         [/music]
     [/event]
 #enddef
@@ -661,6 +662,7 @@
             name={SCENARIO_MUSIC}
             immediate=yes
             append=no
+            ms_after=2000
         [/music]
     [/event]
 #enddef
