@@ -5,6 +5,7 @@ changelog: https://github.com/wesnoth/wesnoth/blob/master/changelog
 Version 1.13.5+dev:
  * Music and sound effects:
    * Added a preference to pause the music when the game loses focus.
+   * Now the storyscreen music fades out at the start of each scenario.
 * Units:
   * Changed the sound for the melee attack of the
 	Loyalist Bowman, Orcish Crossbowman and Orcish Slurbow.
